<resources>
    <string name="app_name">Programmable BT Controller</string>
    <string name="shared_pref_key" translatable="false">com.gpf.app.arduinorc</string>
    <string name="navigation_row_text" translatable="false">NavigationRow Text</string>

    <string name="title_activity_info">Information</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="controller_fragment">Controller</string>
    <string name="bluetooth_fragment">Bluetooth</string>
    <string name="game_pad_fragment">GamePad</string>
    <string name="receiver_fragment">Receiver</string>
    <string name="programmer_fragment">Programmer</string>
    <string name="console_fragment">Console</string>

    <string name="btn_search">Search</string>
    <string name="btn_bluetooth">Bluetooth</string>
    <string name="btn_bonded">Bonded</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>

    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="connecting">[Connecting]</string>
    <string name="connected">[Connected]</string>
    <string name="not_connected">[Not Connected]</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection">Connection</string>
    <string name="connection_confirm">"Do you want connect with "</string>

    <string name="add_input">Add Input</string>
    <string name="enter_name">Enter a Name</string>
    <string name="no_value">No Value</string>
    <string name="delete_all_inputs">Delete all Inputs</string>
    <string name="confirm">Are you sure?</string>
    <string name="command">Command</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="discovering">Discovering</string>
    <string name="discovering_error">Discovering Error</string>
    <string name="command_modification">Command Modification</string>
    <string name="enter_input">Enter a Input</string>
    <string name="edit_input">Edit Input</string>
    <string name="enter_command">Enter a Command</string>
    <string name="action_info">info</string>

    <string name="info_bluetooth_title">Bluetooth Information</string>
    <string name="info_bluetooth_subtitle">This section is where you can control the Bluetooth Adapter of your device.</string>
    <string name="info_bluetooth_btn_bluetooth">This button let you enable/disable the Bluetooth.</string>
    <string name="info_bluetooth_btn_search">Here you will be able to make a bluetooth exploration to detect others bluetooth devices close to you.</string>
    <string name="info_bluetooth_connection">After exploring, just click one of the discovered devices to attemp starting a connection</string>
    <string name="info_bluetooth_btn_bonded">Last Button is useful to show all bonded devices. It lets you to avoid future explorations (explorations require a lot of energy!)</string>
    <string name="info_bluetooth_toolbar_tip">You can see the connection\'s state by looking at the Toolbar.</string>
    <string name="info_controller_title">Controller Information</string>
    <string name="info_controller_subtitle_">This section will give you the capability to exchange information with your device.</string>
    <string name="info_controller_gamepad">1.- GamePad - Sending commands!</string>
    <string name="info_controller_display">Get information about what commands your are sending with every interaction.</string>
    <string name="info_controller_toggle">Toggle between joystick and d-pad</string>
    <string name="info_controller_receiver">2.- Receiver - Receive data from your device</string>
    <string name="info_controller_btn_add">Add all inputs as you want (data that your remote device will send) with an unique ID.</string>
    <string name="info_controller_btn_refresh">This button send a command petition to your remote device.</string>
    <string name="info_controller_btn_delete">Delete all inputs using this button</string>
    <string name="info_controller_protocol">The Protocol - Your device must build each input as follows:</string>
    <string name="info_controller_programmer">3.- Programmer - Edit any control you want</string>
    <string name="info_controller_commands">You can change every control command by editing its values</string>
    <string name="info_console_title">Console Information</string>
    <string name="info_console_subtitle">The console lets you send bytes by typing anything you want. It\'s like a chat.</string>
    <string name="info_console_chat">Program your device to respond at your needs.</string>

    <string-array name="tabs">
        <item>GamePad</item>
        <item>Receiver</item>
        <item>Programmer</item>
    </string-array>

</resources>
