
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gpf.app.arduinorc.InfoActivity"
    android:background="#000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/info_title"
                android:text="@string/info_bluetooth_title" />
            <ImageView
                style="@style/info_icon"
                android:src="@drawable/ic_info"
                android:layout_gravity="center" />
        </LinearLayout>
        <TextView
            style="@style/info_subtitle"
            android:text="@string/info_bluetooth_subtitle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">
            <ImageView
                style="@style/info_icon"
                android:src="@drawable/ic_bluetooth"
                android:background="@drawable/btn_square"/>
            <TextView
                style="@style/info_text"
                android:text="@string/info_bluetooth_btn_bluetooth"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">
            <ImageView
                style="@style/info_icon"
                android:src="@drawable/ic_search"
                android:background="@drawable/btn_square"/>
            <TextView
                style="@style/info_text"
                android:text="@string/info_bluetooth_btn_search"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">
            <TextView
                style="@style/info_text"
                android:text="@string/info_bluetooth_connection"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <ImageView
                    style="@style/info_icon"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_bluetooth_conection"
                    android:background="#FFF"/>
                <ImageView
                    style="@style/info_icon"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_bluetooth_conection"
                    android:background="#FFF"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">
            <ImageView
                style="@style/info_icon"
                android:src="@drawable/ic_bluetooth_bonded"
                android:background="@drawable/btn_square"/>
            <TextView
                style="@style/info_text"
                android:text="@string/info_bluetooth_btn_bonded"/>
        </LinearLayout>
        <TextView
            style="@style/info_subtitle"
            android:text="@string/info_bluetooth_toolbar_tip"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_toolbar"
            android:scaleType="center"/>
    </LinearLayout>
</ScrollView>

