
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.gpf.app.arduinorc.InfoActivity"
        android:background="#000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/info_title"
                    android:text="@string/info_controller_title" />
                <ImageView
                    style="@style/info_icon"
                    android:src="@drawable/ic_info"
                    android:layout_gravity="center" />
            </LinearLayout>
            <TextView
                style="@style/info_subtitle"
                android:text="@string/info_controller_subtitle_"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp">
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_gamepad"/>
                <ImageView
                    style="@style/info_icon"
                    android:src="@drawable/ic_gamepad"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
                <Button
                    style="@style/image_button"
                    android:layout_gravity="center_vertical"
                    android:text="ON" />
                <Button
                    style="@style/circle_button"
                    android:layout_gravity="center_vertical"
                    android:text="A"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:max="9"
                    android:progress="5"
                    android:thumb="@drawable/seekbar_thump"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
                <Button
                    style="@style/image_button"
                    android:background="@drawable/display"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:text="a"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_display"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
                <ImageButton
                    style="@style/image_button"
                    android:src="@drawable/ic_joystick" />
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_toggle"/>
                <ImageButton
                    style="@style/image_button"
                    android:src="@drawable/ic_dpad" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp">
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_receiver"/>
                <ImageView
                    style="@style/info_icon"
                    android:src="@drawable/ic_receiver"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
                <Button
                    style="@style/image_button"
                    android:layout_gravity="center_vertical"
                    android:text="+" />
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_btn_add"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
                <ImageButton
                    style="@style/image_button"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_refresh" />
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_btn_refresh"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
                <ImageButton
                    style="@style/image_button"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_delete" />
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_btn_delete"/>
            </LinearLayout>
            <TextView
                style="@style/info_subtitle"
                android:text="@string/info_controller_protocol"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_protocol"
                android:scaleType="fitXY"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp">
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_programmer"/>
                <ImageView
                    style="@style/info_icon"
                    android:src="@drawable/ic_program"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_up"
                    android:background="#FFF"/>
                <TextView
                    style="@style/info_text"
                    android:text="@string/info_controller_commands"/>
                <TextView
                    android:id="@+id/arrow_up"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:background="#FFF"
                    android:textStyle="bold"
                    android:text="u"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


