<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttons_list">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_bluetooth"
            android:text="@string/btn_bluetooth"
            android:drawableTop="@drawable/ic_bluetooth"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_search"
            android:text="@string/btn_search"
            android:drawableTop="@drawable/ic_search"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_bonded"
            android:text="@string/btn_bonded"
            android:drawableTop="@drawable/ic_bluetooth_bonded"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/devices_list"
        android:layout_below="@+id/buttons_list"
        android:layout_margin="10dp">
    </android.support.v7.widget.RecyclerView>
</RelativeLayout>
