
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gpf.app.arduinorc.InfoActivity"
    android:background="#000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/info_title"
                android:text="@string/info_console_title" />
            <ImageView
                style="@style/info_icon"
                android:src="@drawable/ic_info"
                android:layout_gravity="center" />
        </LinearLayout>
        <TextView
            style="@style/info_subtitle"
            android:text="@string/info_console_subtitle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="#FFF">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:enabled="false"
                android:focusable="false" />

            <ImageButton
                style="@style/circle_button"
                android:id="@+id/console_send"
                android:src="@drawable/ic_send" />
        </LinearLayout>
        <TextView
            style="@style/info_subtitle"
            android:text="@string/info_console_chat"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_console"
            android:scaleType="center"/>
    </LinearLayout>
</ScrollView>

